# Single-View-3D-Gaussian-Splatting

./: .gitignore  README.md  pyproject.toml
data/images/: .gitkeep
output/: .gitkeep
scripts/: single_view_gaussian.py
src/gaussian_splatting/: __init__.py  renderer.py  trainer.py
